# aicvgen

./: .delete_debug_scripts.txt  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Anas_Akhomach_Data_Analyst_de.md  CHANGELOG copy 3.md  CHANGELOG-P3.md  CHANGELOG-UI.md  CHANGELOG.md  COMPREHENSIVE_TECHNICAL_DEBT_AUDIT.md  COMPREHENSIVE_TECHNICAL_DEBT_AUDIT_FINAL.md  Codebase Audit and Remediation Plan_.md  DEBUGGING_LOG.md  DEPLOYMENT.md  DEV_UTILS.md  Dockerfile  ENHANCED_CV_SYSTEM.md  GEMINI.md  GEMINI_DEV.md  IMPLEMENTATION_TRACKER.md  InstallationLog.txt  MVP_IMPLEMENTATION_TRACKER.md  README.md  TASK.md  TASK_BLUEPRINT.md  TASK_COMPLETE.md  agent_base.py  app.py  commit_message.txt  content_writer_agent.py  content_writer_result.json  cv_ai_generator_prototype.ipynb  cv_analyzer_agent.py  cv_builder_agent.py  cv_template.md  cv_workflow_flowchart.mermaid  cv_workflow_flowchart_REVISED.mermaid  cv_workflow_graph_DETAILED_MVP.mermaid  debug_agent.py  (+129 more)
.idx/: dev.nix
.vercel/: project.json
.vs_venv/: pyvenv.cfg
DEBUG_TO_BE_DELETED/: DEBUG_JOB_PARSER_FIX_SUMMARY.md  debug_job_parser.py  debug_key_qualifications_agent.py  debug_key_qualifications_real_prompt.py  debug_key_qualifications_simple.py  debug_professional_experience_agent.py  debug_real_professional_experience_prompt.py  debug_singleton.py  debug_workflow.py  key_qualifications_debug_prompts.txt  key_qualifications_debug_responses.txt  show_cv_parser_prompt.py  temp_import_test.py  test_imports.py  test_key_qualifications_separation.py  test_research_agent.py
DOCs/: TICKET.md  (+3 more)
app/: main.py
(+784 files in other folders)
