[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicvgen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pydantic",
    "langgraph",
    "google-generativeai",
    "weasyprint",
    "python-dotenv",
    "dependency-injector",
    "chromadb",
    "jinja2",
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
