[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicvgen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pydantic",
    "langgraph",
    "google-generativeai",
    "weasyprint",
    "python-dotenv",
    "dependency-injector",
    "chromadb",
    "jinja2",
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
